# CUD_AAI_MINIPROJECT_LLMs-for-Traffic-Incident-Summarization

./: .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.frontend  Makefile  README.md  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: sync-to-hub.yml
backend/: dependencies.py  main.py  model_cache.py
data/raw/gcc/: abu_dhabi_incidents_sample.csv  dubai_pulse_incidents_sample.csv  source_manifest.csv  uae_federal_traffic_stats_sample.csv
docs/: architecture.md
docs/paper/: main.tex  references.bib
docs/poster/: poster_content.md
docs/presentation/: outline.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: index.css
frontend/src/api/: client.js
frontend/src/components/: BatchUpload.jsx  CompareGrid.jsx  DatasetToggle.jsx  LengthSlider.jsx  LiveMetrics.jsx  ModelSelector.jsx  SampleGallery.jsx  SummarizerWidget.jsx  SummaryCard.jsx  TextInputPanel.jsx
frontend/src/pages/: Home.jsx
notebooks/: 01_data_exploration.ipynb  02_model_evaluation.ipynb  03_results_for_paper.ipynb
scripts/: download_notes.md  export_results.sh  run_local_backend.sh
src/app/: schemas.py  services.py
src/cli/: run_evaluation.py  run_inference.py  run_prepare.py
src/data/: download.py  gcc_generator.py  gcc_sources.py  prepare.py  sample_eval_set.py  utils.py
src/evaluate/: eval.py  metrics.py  rubric.py  tables.py
src/models/: abstractive.py  baselines.py  prompts.py  registry.py
tests/: test_abstractive.py  test_api.py  test_baselines.py  test_eval.py
